# guru_investor

./: .gitignore  README.md  ai_infrastructure_picks_shovels_analysis.md  investment_guru_agent.py  investment_gurus.py  orchestrator.py  pyproject.toml  requirements.txt  run.py  test_investment_gurus.py  test_orchestrator.py
